# pam-pgsql

./: .gitignore  CHANGELOG  COPYRIGHT  CREDITS  Makefile.am  Makefile.in  README  acconfig.h  autogen.sh  backend_pgsql.c  backend_pgsql.h  config.h.in  configure  configure.ac  configure.in  install-module  pam_get_pass.c  pam_get_service.c  pam_mod_misc.h  pam_pgsql.c  pam_pgsql.c.orig  pam_pgsql.h  pam_pgsql_options.c  pam_pgsql_options.h  pam_std_option.c  readme.md  sample.sql  test.c
debian/: changelog  control  rules
rpm/: pam-pgsql.spec
src/: Makefile.am  backend_pgsql.c  backend_pgsql.h  install-module  md5.c  md5.h  pam_get_pass.c  pam_get_service.c  pam_mod_misc.h  pam_pgsql.c  pam_pgsql.h  pam_pgsql_options.c  pam_pgsql_options.h  sha1.c
tests/: Makefile.am  authenticate.c  chpass.c
